examples/error/hierachical_modelling/mbsimError/error-GCC.errorOutput
submodel/Untergruppe.xml:10: The diagonal elements of the inertia tensor must be nonnegative.
(At MBSim element /Group[Hauptgruppe1]/Group[Untergruppe]/Object[Box1])
Hauptgruppe.xml:38: [ecount=1] included from here
MBS.mbsim.xml:18: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
